# ai_for_sec_workshop

./: .gitignore  README.md  ai_python.ipynb  auth_logs.csv  data_generation.ipynb  expanding_flowchart.html  pyproject.toml  radial_decision_tree.html  test.py
data/: benign.pkl  benign_features_numeric.pkl
notebooks/: asm_explorer.ipynb  classification.ipynb  eda.ipynb  eda_llm.ipynb  feature_engineering.ipynb  risk_prediction.ipynb  test.ipynb
ti/: .env.example  .gitignore  README.md  pyproject.toml
ti/src/ti/: crew.py  main.py
ti/src/ti/config/: agents.yaml  tasks.yaml
